<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/main_menu_pin_code"
        android:orderInCategory="100"
        android:title="@string/main_menu_pin_code"
        android:icon="@drawable/ic_pin_code"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/main_menu_toggle_theme"
        android:orderInCategory="199"
        android:title="@string/main_menu_theme"
        app:showAsAction="never"/>

    <item android:id="@+id/main_menu_settings"
        android:orderInCategory="200"
        android:title="@string/main_menu_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/main_menu_rate_suggestions"
        android:orderInCategory="300"
        android:title="@string/main_menu_rate_suggestions"
        app:showAsAction="never"/>

    <item android:id="@+id/main_menu_about"
        android:orderInCategory="400"
        android:title="@string/main_menu_about"
        app:showAsAction="never"/>

</menu>